recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:2: error: 'case' expected but 'if' found.
  if (steps != 0) {
  ^