recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int) = steps match{
  if (steps != 0) {
    avance(length)
    droite(angle)
    spiral(steps-1, angle, length + increment, increment)
  }
  
}